@@ -16,6 +16,13 @@ Features & Interface
 * Added TimedeltaCol; currently it's only implemented on PostgreSQL as an
   INTERVAL type.
 
+Small Features
+--------------
+
+* Do not pollute the base sqlmeta class to allow Style to set idName. In
+  the case of inherited idName inherited value takes precedence; To allow
+  Style to set idName resets inherited idName to None.
+
 SQLObject 0.12.1
 ================
 
